--- a/HTML/consumer-signup-phone.html
+++ b/HTML/consumer-signup-phone.html
@@ -37,7 +37,7 @@
 					/>
 				</div>
 				<div class="signup-content">
-					<h1 class="display-4 mb-3 fs-1 fw-semibold mt-4">
+					<h1 class="mb-3 fw-semibold mt-4">
 						Create an account on GreenARV
 					</h1>
 					<p class="mb-4 top-p">
@@ -241,28 +241,22 @@
 					</div>
 				</div>
 			</div>
-			<div class="popup w-25 ms-5 ps-3">
+			<div class="popup ms-5 ps-3" style="width: 500px; height: 512px;">
 				<div
 					class="card text-center mb-3 px-3"
 				>
-					<div class="card-body">
-						<img src="/Images/tick.svg" alt="" class="tick-img my-3">
-						<h5 class="card-title">
-							Congratulations
-							<span
-								><img
-									src="/Images/congratulation.gif"
-									alt=""
-									class="w-50"
-							/></span>
+					<div class="card-body py-4">
+						<img src="/Images/tick.svg" alt="" class="tick-img px-3 py-3">
+						<h5 class="card-title fw-semibold mt-4 text-center" style="font-size: 28px;color: #14365A;">
+							Congratulations 🎉🎉
 						</h5>
-						<p class="card-text my-3">
+						<p class="card-text my-3 text-center" style="font-size: 20px; color: #6B6B6B;">
 							You have successfully created an account
 						</p>
 						<button
 							type="submit"
 							id="accountButton"
-							class="btn popup-btn px-5 text-white py-1 fs-5 mb-4"
+							class="btn popup-btn px-5 text-white py-2 fs-6 mb-4"
 							type="submit"
 						>
 						<a
