--- a/HTML/login.html
+++ b/HTML/login.html
@@ -38,26 +38,26 @@
 						/>
 				</div>
 				<div class="login-content">
-					<h1 class="display-6 mb-3 fw-medium text-center mt-4">How are you using GreenARV</h1>
-					<p class="fw-normal mb-5 top-p text-center">Let us know what role you are signing up for</p>
+					<h1 class="mb-3 fw-medium  mt-4">How are you using GreenARV</h1>
+					<p class="fw-normal mb-5 top-p">Let us know what role you are signing up for</p>
                     <form action="" class="my-4">
-                        <button class="btn border border-light-subtle border-rounded pe-5 w-75 text-start ps-1 fs-5" onclick="window.location.href='./loginF.html'">
-                                <img src="/Images/twemoji-farmer.svg" alt="" class="me-5 ">
-                                I am a farmer
+                        <button class="btn border border-light-subtle border-rounded pe-5 w-75 text-start btn-s d-flex align-items-center justify-content-between py-3" onclick="window.location.href='./loginF.html'">
+                                <div class="img"><img src="/Images/twemoji-farmer.svg" alt="" class="me-5"></div>
+                                <a href="" class="me-5">I am a farmer</a>
                                 <input type="radio" name="" id="" class="ms-5">
                         </button>
                     </form>
                     <form action="" class="mb-5">
-                        <button class="btn border border-light-subtle border-rounded pe-5 w-75 text-start ps-1 fs-5" onclick="window.location.href='./loginC.html'">
-                                <img src="/Images/consumer-emoji.svg" alt="" class="me-5 ">
-                                I am a Consumer
+                        <button class="btn border border-light-subtle border-rounded pe-5 w-75 text-start btn-s d-flex align-items-center justify-content-between py-3" onclick="window.location.href='./loginC.html'">
+                                <div class="img"><img src="/Images/consumer.svg" alt="" class="me-5 "></div>
+                                <a href="" class="me-4">I am a consumer</a>
                                 <input type="radio" name="" id="" class="ms-5">
                         </button>
                     </form>
 						<button
-							class="btn login-btn w-100 text-white mt-4 py-2 fs-5 continue-btn"
+							class="btn login-btn w-100 text-white mt-4 py-2 fs-6 continue-btn"
 							type="submit"
-							onclick="window.location.href='/consumer-login-email.html'"
+							onclick="window.location.href='/consumer-signup-email.html'"
 						>
 							Continue
 						</button>
