--- a/HTML/farmer-login-email.html
+++ b/HTML/farmer-login-email.html
@@ -37,7 +37,7 @@
 					/>
 				</div>
 				<div class="signup-content">
-					<h1 class="display-4 mb-3 fs-1 fw-semibold mt-4">
+					<h1 class="mb-3 fw-semibold mt-4">
 						Welcome Back!
 					</h1>
 					<p class="mb-4 top-p">
