made a few corrections on the landing page

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -49,9 +49,8 @@
                         <li class="nav-item">
                             <a
                                 class="nav-link active bg-transparent fw-medium"
-                                id="first-link"
                                 aria-current="page"
-                                href="#"
+                                href="/index.html"
                                 >Home</a
                             >
                         </li>
@@ -98,7 +97,7 @@
                             <a
                                 class="nav-link fw-medium"
                                 id="nav-link2"
-                                href="/HTML/faq.html"
+                                href="./faq.html"
                                 >FAQs</a
                             >
                         </li>
@@ -106,15 +105,15 @@
                             <a
                                 class="nav-link fw-medium"
                                 id="nav-link3"
-                                href="/HTML/about.html"
+                                href="./about.html"
                                 >About Us</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
-                                class="nav-link fw-medium"
-                                id="nav-link4"
-                                href="/HTML/contact.html"
+                                class="nav-link  fw-medium"
+                                id="first-link"
+                                href="./contact.html"
                                 >Contact Us</a
                             >
                         </li>
@@ -138,10 +137,19 @@
                 </div>
             </div>
         </nav>
-        <div class="hero-container w-100">
-            
+        <div class="hero-container w-100 mb-5">
+            <div class="hero-text pt-5 pe-5">
+                <h1 class="text-white pt-5 pe-5 mt-5">Agriculture without <br> stress.</h1>
+            </div>
         </div>
     </header>
+    <main>
+        <section class="sec1 mt-5">
+            <h2 class="text-center pb-4">Contact Us</h2>
+            <h5 class="text-center">Any question or remarks? Just write us a message!</h5>
+        </section>
+    </main>
+
 
 
     <script
