--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
 						<img
 							src="/Images/Hero2.png"
 							alt="Image 2"
-							class="w-100"
+							class="w-100 img2"
 						/>
 						<div class="hero-text mx-auto">
-							<div class="top-text mb-5">
-								<h1 class="display-3 fw-semibold">
+							<div class="top-text mb-5 img2-text">
+								<h1 class="display-3 fw-semibold ">
 									Not your regular <br />
 									farmers market.
 								</h1>
