corrected the slide images

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<img
 							src="/Images/Hero2.png"
 							alt="Image 2"
-							class="w-100 img2"
+							class="w-100"
 						/>
 						<div class="hero-text mx-auto">
 							<div class="top-text mb-5 img2-text">
@@ -298,7 +298,7 @@
 								</p>
 								<button
 									class="btn  rounded px-4 py-1 fs-6"
-									onclick="window.location.href=''"
+									onclick="window.location.href='/HTML/signup.html'"
 								>
 									Get started
 								</button>
@@ -376,7 +376,7 @@
 								</p>
 								<button
 									class="btn rounded px-4 py-1 fs-6"
-									onclick="window.location.href=''"
+									onclick="window.location.href='/HTML/signup.html'"
 								>
 									Get started
 								</button>
