corrected the consumer signup page

--- a/HTML/consumer-signup-phone.html
+++ b/HTML/consumer-signup-phone.html
@@ -78,7 +78,7 @@
 							/>
 						</div>
 						<div class="form-div mb-3 position-relative">
-							<p class="fw-medium mb-2">Email*</p>
+							<p class="fw-medium mb-2">Phone number*</p>
 							<img
 								src="/Images/phone.jpeg"
 								alt=""
