--- a/HTML/farmer-login-phone.html
+++ b/HTML/farmer-login-phone.html
@@ -115,7 +115,7 @@
 							type="submit"
 							id="accountButton"
 							class="btn signup-btn w-100 text-white py-2 fs-5"
-							type="submit" onclick="window.location.href='./'"
+							type="submit" onclick="window.location.href='./Farmer-dashboard/dashboard.html'"
 						>
 							login
 						</button>
