--- a/HTML/loginF.html
+++ b/HTML/loginF.html
@@ -1,73 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<link
-			rel="shortcut icon"
-			href=""
-		/>
-		<link
-			rel="stylesheet"
-			
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-		/>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-			crossorigin="anonymous"
-		/>
-		<link
-			rel="stylesheet"
-			href="/CSS/signup.css"
-		/>
-		<title>signup Page</title>
-	</head>
-	<body>
-		<section class="login-section w-100">
-			<div class="login-container d-flex justify-content-between">
-				<div class="login-image-wrapper">
-						<img
-							src="/Images/login.png"
-							alt=""
-							class="w-100"
-						/>
-				</div>
-				<div class="login-content">
-					<h1 class="mb-3 fw-medium  mt-4">How are you using GreenARV</h1>
-					<p class="fw-normal mb-5 top-p">Let us know what role you are signing up for</p>
-                    <form action="" class="my-4">
-                        <button class="btn border border-light-subtle border-rounded pe-5 w-75 text-start btn-s d-flex align-items-center justify-content-between py-3" onclick="window.location.href='./loginF.html'">
-                                <div class="img"><img src="/Images/twemoji-farmer.svg" alt="" class="me-5"></div>
-                                <a href="" class="me-5">I am a farmer</a>
-                                <input type="radio" name="" id="" class="ms-5">
-                        </button>
-                    </form>
-                    <form action="" class="mb-5">
-                        <button class="btn border border-light-subtle border-rounded pe-5 w-75 text-start btn-s d-flex align-items-center justify-content-between py-3" onclick="window.location.href='./loginC.html'">
-                                <div class="img"><img src="/Images/consumer.svg" alt="" class="me-5 "></div>
-                                <a href="" class="me-4">I am a consumer</a>
-                                <input type="radio" name="" id="" class="ms-5">
-                        </button>
-                    </form>
-						<button
-							class="btn login-btn w-100 text-white mt-4 py-2 fs-6 continue-btn"
-							type="submit"
-							onclick="window.location.href='./consumer-login-phone.html'"
-						>
-							Continue
-						</button>
-		</section>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-			crossorigin="anonymous"
-		></script>
-		<script src="../login.js"></script>
-	</body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+	<link rel="stylesheet" href="/CSS/signup.css" />
+	<title>signup Page</title>
+</head>
+
+<body>
+	<section class="login-section w-100">
+		<div class="login-container d-flex justify-content-between">
+			<div class="login-image-wrapper">
+				<img src="/Images/login.png" alt="" class="w-100" />
+			</div>
+			<div class="login-content">
+				<h1 class="mb-3 fw-medium  mt-4">How are you using GreenARV</h1>
+				<p class="fw-normal mb-5 top-p">Let us know what role you are signing up for</p>
+				<form action="" class="my-4">
+					<div
+						class="btn border border-light-subtle border-rounded pe-5 w-75 text-start btn-s d-flex align-items-center justify-content-between py-3">
+						<div class="img"><img src="/Images/twemoji-farmer.svg" alt="" class="me-5"></div>
+						<label for="farmer">
+							<a href="" class="me-5">I am a farmer</a>
+						</label>
+						<input type="radio" name="" id="farmer" class="ms-5">
+					</div>
+				</form>
+				<form action="" class="mb-5">
+					<div
+						class="btn border border-light-subtle border-rounded pe-5 w-75 text-start btn-s d-flex align-items-center justify-content-between py-3">
+						<div class="img"><img src="/Images/consumer.svg" alt="" class="me-5 "></div>
+						<label for="consumer">
+							<a href="" class="me-4">I am a consumer</a>
+							<input type="radio" name="" id="consumer" class="ms-5">
+						</label>
+					</div>
+				</form>
+				<button class="btn login-btn w-100 text-white mt-4 py-2 fs-6 continue-btn" type="submit"
+					onclick="window.location.href='./consumer-login-phone.html'">
+					Continue
+				</button>
+	</section>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+		crossorigin="anonymous"></script>
+	<script src="../login.js"></script>
+</body>
+
 </html>
