--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 						<div class="card-body">
 							<h5 class="card-title my-3">Online Store</h5>
 							<p class="card-text">
-								Automate your ordering process with our platform and start selling your produce to customers.
+								Automate your online ordering process on our Ecosystem and have your customers order their choice produce without delay.
 						</div>
 					</div>
 					<div class="card align-items-center text-center py-5 px-4">
@@ -350,7 +350,7 @@
 						<div class="card-body">
 							<h5 class="card-title my-3">Flexible Delivery</h5>
 							<p class="card-text">
-								Delivery options for order fulfillment by creating detailed delivery, shipping and pickup locations.
+								GreenARV has diverse delivery options directly from our trusted farmers to our customers. We ensure this delivery is prompt and timely.
 							</p>
 						</div>
 					</div>
