--- a/HTML/Farmer-dashboard/ai-predict.html
+++ b/HTML/Farmer-dashboard/ai-predict.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -16,7 +17,7 @@
 			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
 			crossorigin="anonymous"
 		/>
-        <link rel="stylesheet" href="/CSS/farmer-dashboard/payment.css">
+        <link rel="stylesheet" href="/CSS/farmer-dashboard/ai.css">
 		<title>Payment Page</title>
 	</head>
 	<body>
@@ -83,16 +84,16 @@
                         <img src="/Images/farm-produce-icon.svg" alt="">
                         <p>Farm Produce</p>
                     </a>
-                    <a href="./ai-crop-advisor.html" class="link-wrapper d-flex gap-3 align-items-center mb-4 ps-4">
-                        <img src="/Images/Ai-crop-advisor-icon.svg" alt="">
+                    <a href="./ai-crop-advisor.html" class="link-wrapper d-flex gap-3 align-items-center mb-4 ps-4 active">
+                        <img src="/Images/Ai-white-icon.svg" alt="">
                         <p>AI Crop Advisor</p>
                     </a>
                     <a href="./new-user-order.html" class="link-wrapper d-flex gap-3 align-items-center mb-4 ps-4">
                         <img src="/Images/orders-grey.svg" alt="" class="">
                         <p>Orders</p>
                     </a>
-                    <a href="./payment-setup.html" class="link-wrapper d-flex gap-3 align-items-center mb-4 ps-4 active">
-                        <img src="/Images/payment-white.svg" alt="">
+                    <a href="./payment-setup.html" class="link-wrapper d-flex gap-3 align-items-center mb-4 ps-4">
+                        <img src="/Images/payments-icon.svg" alt="">
                         <p>Payments</p>
                     </a>
                     <a href="./message.html" class="link-wrapper d-flex gap-3 align-items-center mb-4 ps-4">
@@ -116,58 +117,15 @@
                 <div class="main-content-container">
                     <div class="main-content mt-5 pt-5 ms-md-5">
                         <div class="title d-flex align-items-center justify-content-center flex-column my-5">
-                            <h2>Setup your bank details</h2>
-                            <p>This is where your earnings will be paid to</p>
-                        </div>
-                        <div class="card mx-auto position-relative" style="width: 80%; height: 585px;">
-                            <form action="#" method="" id="bankForm" class="my-4 mx-5">
-                                <div class="form-div">
-                                    <p>Your Country</p>
-                                    <select name="" id="" class="" style="width: 268px;" >
-                                        <option value="">Nigeria</option>
-                                        <option value="">Kenya</option>
-                                        <option value="">Ethiopia</option>
-                                        <option value="">Uganda</option>
-                                        <option value="">Tanzania</option>
-                                        <option value="">Rwanda</option>
-                                    </select>
-                                </div>
-                                <div class="form-div my-5">
-                                    <p>Bank</p>
-                                    <select name="" id="" style="width: 465px;" >
-                                        <option value="">Sterling Bank</option>
-                                        <option value="">Sterling Bank</option>
-                                        <option value="">Sterling Bank</option>
-                                        <option value="">Sterling Bank</option>
-                                        <option value="">Sterling Bank</option>
-                                    </select>
-                                </div>
-                                <div class="form-div mb-4">
-                                    <p>Account Nummber</p>
-                                    <input type="text" placeholder="Account Number" style="width: 236px;">
-                                </div>
-                                <div class="account-btn d-flex justify-content-end mt-5">
-                                    <button type="" class="mt-5 border-0" id=" verification-btn">Verify Account details</button>
-                                    
-                                <div class=" card position-absolute px-4" id="verification-card" style="width: 542px; height: 297px; top: 20%; left: 20%; opacity: 0;">
-                                    <div class="img d-flex justify-content-end mt-4">
-                                        <img src="/Images/close-store-card.svg" alt="" onclick="window.location.href='./payment-setup.html'">
-                                    </div>
-                                    <h3 class="mb-3" style="color: #007400; font-size: 18px !important; font-weight: 700; line-height: 28px;">Add extra security to your account</h3>
-                                    <p style="color: #000; font-size: 14px !important; line-height: 28px;">Enhance and improve your security information sharing by enabling the Two-factor authentication (2FA) that identifies and mitigates security risks. Authentication protects information from possible leaks and keeps an eye on your account.</p>
-                                    <div class="enable-btn d-flex justify-content-end"  onclick="window.location.href='./payment.html'" >
-                                        <button class="mt-3 border-0 text-white"style="background-color: #007400; width: 160px; padding: 12px 8px !important; border-radius: 8px;">Enable 2FA</button>
-                                    </div>
-                                </div>
-                                </div>
-                            </form>
+                            <h2 class="mb-2">Crop Advisor</h2>
+                            <p class="fw-normal" style="color: #000; font-size: 16px !important;line-height: 24px;">Estimated crop yields for different crops:</p>
                         </div>
                     </div>
                 </div>
             </div>
 
         </main>
-
+        
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
